--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,6 +47,7 @@
     "react-hook-form": "^7.56.2",
     "react-resizable-panels": "^3.0.1",
     "react-router-dom": "6.22.3",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
     "recharts": "^3.7.0",
     "sonner": "^2.0.3",
